test/files/pos/i20026/test.scala

object Test extends App {
  println {
    (new JTest, new KTest, ((s: String) => s): JFun)
  }
}
