test/files/neg/i20026/test.scala

object Test extends App {
  println {
    new JTest
  }
}
